--- a/Rotating_nav/style.css
+++ b/Rotating_nav/style.css
@@ -22,7 +22,7 @@ img{
 .container{
     background-color: antiquewhite;
     transform-origin: top left;
-    transition: transform 0.3 linear;
+    transition: transform 0.3s linear;
     width: 100vw;
     min-height: 100vh;
     padding: 50px;
@@ -105,7 +105,7 @@ nav ul li{
     margin: 40px 0;
     color: white;
     transform: translateX(-100%);
-    transition: transform 0.4 ease-in;
+    transition: transform 0.2s ease-in;
 }
 
 nav ul li i{
